# NaucnoIzracunavanje

./: .gitignore  CATPCA.pptx  README.md  pyproject.toml
dinosaur/: DataPreprocessor.py  princals.py  princals_notebook.ipynb  principals.py  principals_notebook.ipynb
notebooks/: data_preprocessing.ipynb  princals.ipynb  princals_test.py  principals.ipynb
